ufoai (0.0.svn) unstable; urgency=low

  * SVN snapshot.
  * Depend on newer data package.
  * Drop update-ufoai-campaign script (and thus ufoai-common package), no
    longer applying to current code.
  * Build map- and model-building tool, in new ufoai-tools package.
  * Automatically update package version to use SVN revision number when
    run from a SVN working copy.
  * Simplified /usr/games/ufo script much, now that ~/.ufoai is used by the
    game itself.

 -- Yann Dirson <dirson@debian.org>  Sat, 22 Apr 2006 12:58:57 +0200

ufoai (0.0.040218-0.8) unstable; urgency=low

  * Have DEB_BUILD_OPTIONS exported, so that the binaries really do not
    get stripped.

 -- Yann Dirson <dirson@debian.org>  Tue, 20 Apr 2004 11:32:05 +0200

ufoai (0.0.040218-0.7) unstable; urgency=low

  * Made Sys_GetGameAPI() to look for game.so instead of a lib with an
    arch-dependant name, thus allowing building on more archs than just
    i386 and alpha.  Updated all Makefiles with this name while I was at
    it.
  * Make so that update-ufoai-campaign properly removes the generated
    campaign when no snippets are found, instead of failing when removing
    the last data package.

 -- Yann Dirson <dirson@debian.org>  Mon, 19 Apr 2004 20:35:32 +0200

ufoai (0.0.040218-0.6) unstable; urgency=low

  * Added update-ufoai-campaign script, in new ufoai-common package.

 -- Yann Dirson <dirson@debian.org>  Mon, 19 Apr 2004 00:27:34 +0200

ufoai (0.0.040218-0.5) unstable; urgency=low

  * Set DEB_BUILD_OPTIONS=nostrip so that people can give useful info on
    coredumps.
  * Ensure gl_ref/gl_rmain.c::R_Init() returns 0 when reaching end of
    function, fixing the problem where people reported the OpenGL renderer
    did not init where there was no error reported - fix from upstream
    found at http://ufo.myexp.de/phpBB2/viewtopic.php?t=327
  * Use libGL.so.1 as default driver, not libGL.so, so that people do not
    need a libgl-dev package installed.
