@@ -1,0 +1,6 @@
+/*.debhelper
+/*.substvars
+/ufoai
+/ufoai-tools
+/ufoai-server
+/files
