@@ -1,0 +1,1 @@
+build/ufoded /usr/games/ufoai
