@@ -1,1 +1,1 @@
-linux/debug*/ufo2map /usr/lib/games/ufoai
+build/ufo2map /usr/lib/games/ufoai
