@@ -4,13 +4,14 @@ ufoai (0.0.svn) unstable; urgency=low
   * Depend on newer data package.
   * Drop update-ufoai-campaign script (and thus ufoai-common package), no
     longer applying to current code.
-  * Build map- and model-building tool, in new ufoai-tools package.
+  * Build map-building tool, in new ufoai-tools package.
+  * Build standalone server, in new ufoai-server package.
   * Automatically update package version to use SVN revision number when
     run from a SVN working copy.
   * Simplified /usr/games/ufo script much, now that ~/.ufoai is used by the
     game itself.
 
- -- Yann Dirson <dirson@debian.org>  Sat, 22 Apr 2006 12:58:57 +0200
+ -- Yann Dirson <dirson@debian.org>  Tue, 25 Jul 2006 23:44:20 +0200
 
 ufoai (0.0.040218-0.8) unstable; urgency=low
 
